ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-04-29 Benedikt Heintel
	- ENGINE:
		* Fixed #1148: DNS serial is not updated more than once a day when changing sub domains
	- GUI:
		* Fixed #1200: orderpanel {THEME_CHARSET}
		* Fixed #1212: Syntax Error in edit_mail_acc.php
		* Fixed #1221: Fatal error on database error
	- LANGUAGES:
		* Updated Polish
		* Updated Czech

2008-04-29 Jochen Manz
	- TOOLS:
		* Updated phpMyAdmin to 2.11.5.2
		* Updated phpMyAdmin to 2.11.6

2008-04-28 Jochen Manz
	- CONFIGS:
		* Fixed #1202: no upload_tmp_dir defined in master.conf for mod-php
	- DATABASE:
		* Updated database files
	- DOCS:
		* Fixed #1219: OpenSuse: php5-exif is missing in opensuse103-packages

2008-04-28 Benedikt Heintel
	- DATABASE:
		* Updated database files
	- GUI:
		* Fixed #1212: Syntax Error in edit_mail_acc.php

2008-04-27 Jochen Manz
	- GUI:
		* Fixed #1217: mail auto responder doesn't work
	- CONFIGS:
		* Fixed #1216: Password protection for cgi-bin

2008-04-25 Malte Geierhos
	- CONFIGS:
		* Fixed Awstats path for OpenSuSe

2008-04-24 Jochen Manz
	- GUI:
		* Fixed #1205: webtools - small layout issue...
		* Fixed #1206: german language error -> variable not replaced
		* Enhanced the DB update functionality

2008-04-24 Benedikt Heintel
	- GUI:
		* Fixed #1196: New mail account/forward and auto responder handling
	- ENGINE:
		* Fixed #1148: DNS serial is not updated more than once a day when changing sub domains
		* Fixed #1169: Awstats on Opensuse
		* Fixed #1196: New mail account/forward and auto responder handling

2008-04-21 Jochen Manz
	- CONFIGS:
		* Corrected gentoo postfix main.cnf
	- SETUP:
		* Fixed #1204: wrong configs-Path in Makefile.ubuntu (Install doesn't work)

2008-04-17 Benedikt Heintel
	- ENGINE:
		* Fixed #1193: Typo in engine/ispcp-mbox-mngr
	- GUI:
		* Fixed #1192: Typo in gui/admin/settings.php
	- SETUP:
		* Fixed #1191: MySQL password auto-generation for daemons shouldn't contain '#'

2008-04-16 Benedikt Heintel
	- CONFIGS: